<resources>
    <string name="app_name">Precio Justo</string>
    <string name="play">Play</string>
    <string name="settings">Ajustes</string>
    <string name="editTextPrice">Pon el precio aqui</string>
    <string name="contador">WINS: 0 || LIVES: 2</string>
    <string name="textPrueba">TEXTO DE PRUEBA</string>
    <string name="chose_level">Chose Level</string>
    <string name="tienda">Apoyame como puedas</string>
    <string name="more_coins">+ 5 coins</string>
    <string name="score">SCORE:</string>
    <string name="you_win">You win</string>
    <string name="quieres_continuar">¿Quieres Continuar?</string>
    <string name="_0">0</string>
    <string name="dialog_text">Si no quieres volver a empezar paga y sigue con tu record</string>
    <string name="cancel">Cancel</string>
    <string name="continuar_2">2 Coins to Continue</string>
    <string name="precio10coins">1€</string>
    <string name="comprar_10_coins">Comprar 10 coins</string>
    <string name="comprar_25_coins">Comprar 25 coins</string>
    <string name="precio50coins">4€</string>
    <string name="comprar_50_coins">Comprar 50 coins</string>
    <string name="comprar25coins">2€</string>
    <string name="comprar_100_coins">Comprar 100 coins</string>
    <string name="precio100coins">7€</string>
    <string name="text_apoyo">Apoyame de la manera que quieras</string>
    <string name="copy">Copy</string>
    <string name="mandame_btc_a_mi_wallet">Mandame BTC a mi Wallet</string>
    <string name="mandame_eth_a_mi_wallet">Mandame ETH a mi Wallet</string>
    <string name="mandame_paypal">Mandame Paypal</string>
    <string name="info_txt">Como puedes ver no hay anuncios en este juego, de modo que no tengo ningun beneficio por esta app ni guardo informacion sobre los jugadores asi que agradezco mucho cualquier apoyo que puedas darme por muy pequeño que sea.</string>
    <string name="open_my_github">Open my GitHub</string>
    <string name="open_my_linkedin">Open my Linkedin</string>
    <string name="link_paypal">paypal.com/paypalme/AndroidDevPay</string>
    <string name="eth_wallet">0x627A620F4E6513e541b3c4b4362bc997259Ce988</string>
    <string name="btc_wallet">3Gr1iUsGceSczrG6wVSBoBEF2tPGWqvdwt</string>
</resources>